Got basic selector working, need to be more specific with children

--- a/playground/index.html
+++ b/playground/index.html
@@ -21,14 +21,14 @@
 
 <script type="text/javascript">
 
-	$("body").find("*").hover(function(){
-		$(this).css("box-shadow","0px 0px 5px 0px rgba(0, 255, 0, 0.67)")
-		$(this).click(function(){
-			console.log($(this))
-		})
-	},function(){
-		$(this).css("box-shadow", "none")
-	})
+	// $("body").find("*").hover(function(){
+	// 	$(this).css("box-shadow","0px 0px 5px 0px rgba(0, 255, 0, 0.67)")
+	// 	$(this).click(function(){
+	// 		console.log($(this))
+	// 	})
+	// },function(){
+	// 	$(this).css("box-shadow", "none")
+	// })
 
 
 </script>
