added input section need to hook it up

--- a/playground/index.html
+++ b/playground/index.html
@@ -16,6 +16,14 @@
 			<p>Paragraph paragraphparagraphparagraphparagraphparagraphparagraphparagraphparagraphparagraphparagraphparagraphparagraphparagraphparagraphparagraphparagraphparagraphparagraphparagraphparagraphparagraphparagraphparagraph</p>
 		</div>
 	</div>
+	<div class="another-class">
+		<p id="secretp">pppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppp</p>
+		<ol>
+			<li>Number 1</li>
+			<li>Number 2</li>
+			<li>Number 3</li>
+		</ol>
+	</div>
 </body>
 </html>
 
